--- a/style.css
+++ b/style.css
@@ -139,9 +139,11 @@ nav ul {
 
 div.entete {
   text-align: center;
-
 }
 
+div.banniere {
+    background-color : 
+    
 form {
         margin: 0 auto;
         width: 400px;
